// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetail
    dispatchFetchFilmDetails={[Function]}
    filmDetails={
        Object {
            "Poster": "https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg",
            "Title": "The Hobbit: The Battle of the Five Armies",
            "Type": "movie",
            "Year": "2014",
            "imdbID": "tt2310332",
          }
    }
    imdbID="tt2310332"
    isFetching={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TitleBanner
          title="The Hobbit: The Battle of the Five Armies"
/>,
        <div
          style={
                    Object {
                              "marginLeft": 20,
                            }
          }
>
          <img
                    alt="poster"
                    src="https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg"
                    style={
                              Object {
                                        "marginTop": 10,
                                      }
                    }
          />
          <ul
                    style={
                              Object {
                                        "fontSize": "14pt",
                                        "marginTop": 20,
                                      }
                    }
          >
                    <li>
                              2014
                    </li>
                    <li>
                              Directed by 
                    </li>
                    <li>
                              Written by 
                    </li>
                    <li>
                              Cast: 
                    </li>
                    <li>
                              Language: 
                    </li>
                    <li>
                              Run Time: 
                    </li>
                    <li>
                              IMDB Rating: 
                              /10
                    </li>
                    <li>
                              Box Office: 
                    </li>
                    <li>
                              <a
                                        href="https://www.imdb.com/title/tt2310332"
                              >
                                        IMDB page
                              </a>
                    </li>
          </ul>
          <ButtonLink
                    onClick={[Function]}
                    style={
                              Object {
                                        "marginBottom": 20,
                                      }
                    }
                    title="Scroll to top of page"
          >
                    Top
          </ButtonLink>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "title": "The Hobbit: The Battle of the Five Armies",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="poster"
              src="https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg"
              style={
                            Object {
                                          "marginTop": 10,
                                        }
              }
/>,
            <ul
              style={
                            Object {
                                          "fontSize": "14pt",
                                          "marginTop": 20,
                                        }
              }
>
              <li>
                            2014
              </li>
              <li>
                            Directed by 
              </li>
              <li>
                            Written by 
              </li>
              <li>
                            Cast: 
              </li>
              <li>
                            Language: 
              </li>
              <li>
                            Run Time: 
              </li>
              <li>
                            IMDB Rating: 
                            /10
              </li>
              <li>
                            Box Office: 
              </li>
              <li>
                            <a
                                          href="https://www.imdb.com/title/tt2310332"
                            >
                                          IMDB page
                            </a>
              </li>
</ul>,
            <ButtonLink
              onClick={[Function]}
              style={
                            Object {
                                          "marginBottom": 20,
                                        }
              }
              title="Scroll to top of page"
>
              Top
</ButtonLink>,
          ],
          "style": Object {
            "marginLeft": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "poster",
              "src": "https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg",
              "style": Object {
                "marginTop": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  2014
</li>,
                <li>
                  Directed by 
</li>,
                <li>
                  Written by 
</li>,
                <li>
                  Cast: 
</li>,
                <li>
                  Language: 
</li>,
                undefined,
                <li>
                  Run Time: 
</li>,
                <li>
                  IMDB Rating: 
                  /10
</li>,
                <li>
                  Box Office: 
</li>,
                undefined,
                <li>
                  <a
                                    href="https://www.imdb.com/title/tt2310332"
                  >
                                    IMDB page
                  </a>
</li>,
              ],
              "style": Object {
                "fontSize": "14pt",
                "marginTop": 20,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "2014",
                },
                "ref": null,
                "rendered": "2014",
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Directed by ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Directed by ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Written by ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Written by ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Cast: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Cast: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Language: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Language: ",
                  undefined,
                ],
                "type": "li",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Run Time: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Run Time: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "IMDB Rating: ",
                    undefined,
                    "/10",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "IMDB Rating: ",
                  undefined,
                  "/10",
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Box Office: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Box Office: ",
                  undefined,
                ],
                "type": "li",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="https://www.imdb.com/title/tt2310332"
>
                    IMDB page
</a>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "IMDB page",
                    "href": "https://www.imdb.com/title/tt2310332",
                  },
                  "ref": null,
                  "rendered": "IMDB page",
                  "type": "a",
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Top",
              "onClick": [Function],
              "style": Object {
                "marginBottom": 20,
              },
              "title": "Scroll to top of page",
            },
            "ref": null,
            "rendered": "Top",
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TitleBanner
            title="The Hobbit: The Battle of the Five Armies"
/>,
          <div
            style={
                        Object {
                                    "marginLeft": 20,
                                  }
            }
>
            <img
                        alt="poster"
                        src="https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg"
                        style={
                                    Object {
                                                "marginTop": 10,
                                              }
                        }
            />
            <ul
                        style={
                                    Object {
                                                "fontSize": "14pt",
                                                "marginTop": 20,
                                              }
                        }
            >
                        <li>
                                    2014
                        </li>
                        <li>
                                    Directed by 
                        </li>
                        <li>
                                    Written by 
                        </li>
                        <li>
                                    Cast: 
                        </li>
                        <li>
                                    Language: 
                        </li>
                        <li>
                                    Run Time: 
                        </li>
                        <li>
                                    IMDB Rating: 
                                    /10
                        </li>
                        <li>
                                    Box Office: 
                        </li>
                        <li>
                                    <a
                                                href="https://www.imdb.com/title/tt2310332"
                                    >
                                                IMDB page
                                    </a>
                        </li>
            </ul>
            <ButtonLink
                        onClick={[Function]}
                        style={
                                    Object {
                                                "marginBottom": 20,
                                              }
                        }
                        title="Scroll to top of page"
            >
                        Top
            </ButtonLink>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "title": "The Hobbit: The Battle of the Five Armies",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="poster"
                src="https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg"
                style={
                                Object {
                                                "marginTop": 10,
                                              }
                }
/>,
              <ul
                style={
                                Object {
                                                "fontSize": "14pt",
                                                "marginTop": 20,
                                              }
                }
>
                <li>
                                2014
                </li>
                <li>
                                Directed by 
                </li>
                <li>
                                Written by 
                </li>
                <li>
                                Cast: 
                </li>
                <li>
                                Language: 
                </li>
                <li>
                                Run Time: 
                </li>
                <li>
                                IMDB Rating: 
                                /10
                </li>
                <li>
                                Box Office: 
                </li>
                <li>
                                <a
                                                href="https://www.imdb.com/title/tt2310332"
                                >
                                                IMDB page
                                </a>
                </li>
</ul>,
              <ButtonLink
                onClick={[Function]}
                style={
                                Object {
                                                "marginBottom": 20,
                                              }
                }
                title="Scroll to top of page"
>
                Top
</ButtonLink>,
            ],
            "style": Object {
              "marginLeft": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "poster",
                "src": "https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg",
                "style": Object {
                  "marginTop": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    2014
</li>,
                  <li>
                    Directed by 
</li>,
                  <li>
                    Written by 
</li>,
                  <li>
                    Cast: 
</li>,
                  <li>
                    Language: 
</li>,
                  undefined,
                  <li>
                    Run Time: 
</li>,
                  <li>
                    IMDB Rating: 
                    /10
</li>,
                  <li>
                    Box Office: 
</li>,
                  undefined,
                  <li>
                    <a
                                        href="https://www.imdb.com/title/tt2310332"
                    >
                                        IMDB page
                    </a>
</li>,
                ],
                "style": Object {
                  "fontSize": "14pt",
                  "marginTop": 20,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "2014",
                  },
                  "ref": null,
                  "rendered": "2014",
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Directed by ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Directed by ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Written by ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Written by ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Cast: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Cast: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Language: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Language: ",
                    undefined,
                  ],
                  "type": "li",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Run Time: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Run Time: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "IMDB Rating: ",
                      undefined,
                      "/10",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "IMDB Rating: ",
                    undefined,
                    "/10",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Box Office: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Box Office: ",
                    undefined,
                  ],
                  "type": "li",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="https://www.imdb.com/title/tt2310332"
>
                      IMDB page
</a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "IMDB page",
                      "href": "https://www.imdb.com/title/tt2310332",
                    },
                    "ref": null,
                    "rendered": "IMDB page",
                    "type": "a",
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Top",
                "onClick": [Function],
                "style": Object {
                  "marginBottom": 20,
                },
                "title": "Scroll to top of page",
              },
              "ref": null,
              "rendered": "Top",
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders a spinner if isFetching 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetail
    dispatchFetchFilmDetails={[Function]}
    filmDetails={
        Object {
            "Poster": "https://images-na.ssl-images-amazon.com/images/M/MV5BODAzMDgxMDc1MF5BMl5BanBnXkFtZTgwMTI0OTAzMjE@._V1_SX300.jpg",
            "Title": "The Hobbit: The Battle of the Five Armies",
            "Type": "movie",
            "Year": "2014",
            "imdbID": "tt2310332",
          }
    }
    imdbID="tt2310332"
    isFetching={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Unknown
        size={64}
/>,
      "style": Object {
        "display": "flex",
        "height": "100vh",
        "justifyContent": "center",
        "minHeight": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "size": 64,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Unknown
          size={64}
/>,
        "style": Object {
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
          "minHeight": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "size": 64,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
